--- a/index3.html
+++ b/index3.html
@@ -23,6 +23,8 @@
 
     <script src="assets/libs/angular.js"></script>
     <script src="assets/libs/angular-route.js"></script>
+    <script src="assets/libs/lodash/lodash.js" type="text/javascript"></script>
+    <script src="assets/libs/restangular/restangular.js" type="text/javascript"></script>
 
     <!-- Load custom scripts via RequireJS -->
     <script src="assets/libs/require.js" data-main="app/index3/main.js"></script>
