--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,43 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+
+    <link href="assets/libs/bootstrap-3.3.4-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/libs/bootstrap-3.3.4-dist/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/style-metro.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
+    <link href="assets/css/pages/search.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/pages/blog.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/pages/news.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/ng-trans.css" rel="stylesheet" type="text/css" />
+    <!--<link href="assets/libs/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/libs/gritter/css/jquery.gritter.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/angular-xeditable/css/xeditable.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/angular-loading-bar/loading-bar.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/data-tables/DT_bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/bootstrap-wysihtml5/bootstrap-wysihtml5.css" rel="stylesheet" type="text/css" />-->
+    <!--<link href="assets/libs/select2/select2_metro.css" rel="stylesheet" type="text/css" />-->
+    <link href="assets/css/pages/login.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/pages/profile.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/pages/error.css" rel="stylesheet" type="text/css" />
+    <!--<link href="assets/libs/bootstrap-datepicker/css/datepicker.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/bootstrap-timepicker/compiled/timepicker.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/bootstrap-datetimepicker/css/datetimepicker.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/angular-slider/angular-slider.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/bootstrap-tagsinput/bootstrap-tagsinput.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/libs/bootstrap-switch/static/stylesheets/bootstrap-switch-metro.css" rel="stylesheet" type="text/css"/>-->
+
+    <link href="assets/css/themes/contineo.css" rel="stylesheet" type="text/css"/>
+
+    <!-- shame.css pattern - ALWAYS as the last CSS -->
+    <link href="assets/css/agcapital.css" rel="stylesheet" type="text/css"/>
+
 </head>
 <body data-ng-controller="allenCtrl as allenCtrl">
     <h1>{{ allenCtrl.title }}</h1>
@@ -25,6 +62,7 @@
     <script src="assets/libs/angular-route.js"></script>
     <script src="assets/libs/lodash/lodash.js" type="text/javascript"></script>
     <script src="assets/libs/restangular/restangular.js" type="text/javascript"></script>
+    <script src="assets/libs/ng-table.js" type="text/javascript"></script>
 
     <!-- Load custom scripts via RequireJS -->
     <script src="assets/libs/require.js" data-main="app/index3/main.js"></script>
