--- a/index3.html
+++ b/index3.html
@@ -63,6 +63,8 @@
     <script src="assets/libs/lodash/lodash.js" type="text/javascript"></script>
     <script src="assets/libs/restangular/restangular.js" type="text/javascript"></script>
     <script src="assets/libs/ng-table.js" type="text/javascript"></script>
+    <script src="assets/libs/angular-translate/angular-translate.js" type="text/javascript"></script>
+    <script src="assets/libs/angular-translate/angular-translate-loader-static-files.js" type="text/javascript"></script>
 
     <!-- Load custom scripts via RequireJS -->
     <script src="assets/libs/require.js" data-main="app/index3/main.js"></script>
