--- a/index3.html
+++ b/index3.html
@@ -67,6 +67,7 @@
     <script src="assets/libs/angular-translate/angular-translate-loader-static-files.js" type="text/javascript"></script>
 
     <script src="app/index3/allenprovider.js" type="text/javascript"></script>
+    <!--<script src="app/ecma/oop.js" type="text/javascript"></script>-->
     <!-- Load custom scripts via RequireJS -->
     <script src="assets/libs/require.js" data-main="app/index3/main.js"></script>
 </body>
