--- a/index3.html
+++ b/index3.html
@@ -41,7 +41,8 @@
     <link href="assets/css/agcapital.css" rel="stylesheet" type="text/css"/>
 
 </head>
-<body data-ng-controller="allenCtrl as allenCtrl">
+<body>
+    <div data-ng-controller="allenCtrl as allenCtrl">
     <h1>{{ allenCtrl.title }}</h1>
 
     <ul>
@@ -57,7 +58,12 @@
         <!-- END PAGE CONTAINER-->
     </div>
     <!-- END PAGE -->
+    </div>
 
+    <div data-ng-controller="FxnCtrl">
+        {{ fxnCtrlVar }}
+
+    </div>
     <script src="assets/libs/angular.js"></script>
     <script src="assets/libs/angular-route.js"></script>
     <script src="assets/libs/lodash/lodash.js" type="text/javascript"></script>
